# Mytrip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  setup.py
.gitlab/issue_templates/: bug_report.md  documentation.md  feature_request.md
.gitlab/merge_request_templates/: bugfix.md  feature.md
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: chat.py
backend/app/services/: ai_service.py
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ChatMessage.tsx  Navbar.tsx  QuickActions.tsx
frontend/src/pages/: AboutPage.tsx  ChatPage.tsx  DestinationsPage.tsx  ItineraryPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
